; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_atmel_usba_udc.c_set_address.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_atmel_usba_udc.c_set_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usba_udc = type { i32 }

@DBG_BUS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"setting address %u...\0A\00", align 1
@CTRL = common dso_local global i32 0, align 4
@DEV_ADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usba_udc*, i32)* @set_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_address(%struct.usba_udc* %0, i32 %1) #0 {
  %3 = alloca %struct.usba_udc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.usba_udc* %0, %struct.usba_udc** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @DBG_BUS, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @DBG(i32 %6, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = load %struct.usba_udc*, %struct.usba_udc** %3, align 8
  %10 = load i32, i32* @CTRL, align 4
  %11 = call i32 @usba_readl(%struct.usba_udc* %9, i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* @DEV_ADDR, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @USBA_BFINS(i32 %12, i32 %13, i32 %14)
  store i32 %15, i32* %5, align 4
  %16 = load %struct.usba_udc*, %struct.usba_udc** %3, align 8
  %17 = load i32, i32* @CTRL, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @usba_writel(%struct.usba_udc* %16, i32 %17, i32 %18)
  ret void
}

declare dso_local i32 @DBG(i32, i8*, i32) #1

declare dso_local i32 @usba_readl(%struct.usba_udc*, i32) #1

declare dso_local i32 @USBA_BFINS(i32, i32, i32) #1

declare dso_local i32 @usba_writel(%struct.usba_udc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
